--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-title: Your Name
-position: Ph.D. Student
-affiliation: Your Affiliation
-email: yourname (at) example.edu
+title: Zirui Li
+position: Ph.D. Candicate
+affiliation: Beijing Institute of Technology/ TU Dresden
+email: z.li@bit.edu.cn
 keywords: minimal academic
-google_scholar: https://scholar.google.com/
-github_link: https://github.com/yaoyao-liu/minimal-light
-linkedin: https://www.linkedin.com/
-avatar: ./assets/img/avatar.png
+google_scholar: https://scholar.google.com/citations?user=nCHChhsAAAAJ&hl=zh-CN
+github_link: https://github.com/lzrbit
+linkedin: https://www.linkedin.com/in/zirui-li-25a63a200/
+avatar: ./assets/img/self-pic.png
 google_analytics: UA-111540567-4
 favicon: ./assets/img/favicon.png
 favicon_dark: ./assets/img/favicon-dark.png
