--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ keywords: minimal academic
 google_scholar: https://scholar.google.com/citations?user=nCHChhsAAAAJ&hl=zh-CN
 github_link: https://github.com/lzrbit
 linkedin: https://www.linkedin.com/in/zirui-li-25a63a200/
-avatar: ./assets/img/self-pic.png
+avatar: ./assets/img/self-pic.jpeg
 google_analytics: UA-111540567-4
 favicon: ./assets/img/favicon.png
 favicon_dark: ./assets/img/favicon-dark.png
