--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 title: Zirui Li
 position: Ph.D. Candicate
 affiliation: Beijing Institute of Technology/ TU Dresden
-email: z.li@bit.edu.cn
+email: z.li@bit.edu.cn / zirui.li@mailbox.tu-dresden.de
 keywords: minimal academic
 google_scholar: https://scholar.google.com/citations?user=nCHChhsAAAAJ&hl=zh-CN
 github_link: https://github.com/lzrbit
 linkedin: https://www.linkedin.com/in/zirui-li-25a63a200/
-avatar: ./assets/img/self-pic.jpeg
+avatar: ./assets/img/self-pic.png
 google_analytics: UA-111540567-4
 favicon: ./assets/img/favicon.png
 favicon_dark: ./assets/img/favicon-dark.png
