--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Zirui Li
-position: Ph.D. Candicate
+position: Ph.D. Candidate
 affiliation: Beijing Institute of Technology/ TU Dresden
 email: z.li@bit.edu.cn / zirui.li@mailbox.tu-dresden.de
 keywords: minimal academic
