--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Zirui Li
 position: Ph.D. Candidate
 affiliation: Beijing Institute of Technology/ TU Dresden
-email: z.li@bit.edu.cn / zirui.li@mailbox.tu-dresden.de
+email: z.li@bit.edu.cn / zirui.li@tu-dresden.de
 keywords: minimal academic
 google_scholar: https://scholar.google.com/citations?user=nCHChhsAAAAJ&hl=zh-CN
 github_link: https://github.com/lzrbit
