--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Zirui Li
-position: Ph.D. Candidate
-affiliation: Beijing Institute of Technology/ TU Dresden
+position: Ph.D Candidate
+affiliation: Beijing Institute of Technology
 email: ziruili.work.bit@gmail.com
 keywords: minimal academic
 google_scholar: https://scholar.google.com/citations?user=nCHChhsAAAAJ&hl=zh-CN
